# ARCHIMAGA

./: .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/archimaga/: archimaga.hpp
source/: archimaga.cpp
test/: CMakeLists.txt
test/source/: archimaga_test.cpp
